<resources>
    <string name="app_name">Hangman</string>
    <string name="main_title">Welcome to the Hangman Game!</string>
    <string name="difficulty_option_text">Please choose your difficulty level:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="load_dictionary">Load Dictionary</string>
    <string name="hangman_picture">This is a picture of the hangman</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="a">A</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="c">C</string>
    <string name="v">V</string>
    <string name="b">B</string>
    <string name="n">N</string>
    <string name="m">M</string>
</resources>
