<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_title"
        android:textSize="25sp"
        android:paddingTop="20dp"
        android:textColor="#e71818"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/difficulty_option_text"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:textColor="#2b3b85"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/easy_button"
            android:text="@string/easy"
            android:textColor="@android:color/holo_green_dark"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/medium_button"
            android:text="@string/medium"
            android:textColor="@android:color/holo_orange_dark"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hard_button"
            android:text="@string/hard"
            android:textColor="@android:color/holo_red_dark"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/load_dictionary"
        android:layout_gravity="center"
        android:text="@string/load_dictionary"
        android:onClick="onDictionaryButtonPress"/>

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:indeterminate="false"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hangman2"/>


</LinearLayout>